// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox SNAPSHOTS should render 1`] = `
<div>
  <span>
    <input
      class="checkbox-input"
      id="test"
      type="checkbox"
    />
    <label
      class="checkbox-label"
      for="test"
    />
  </span>
</div>
`;

exports[`CheckBox SNAPSHOTS should render controllable mode 1`] = `
<div>
  <span>
    <input
      checked=""
      class="checkbox-input"
      id="checkbox-9gz8gh"
      name="checker"
      type="checkbox"
    />
    <label
      class="checkbox-label"
      for="checkbox-9gz8gh"
    />
  </span>
</div>
`;

exports[`CheckBox SNAPSHOTS should render controllable mode 2`] = `
<div>
  <span>
    <input
      checked=""
      class="checkbox-input"
      id="checkbox-xps9nn"
      name="checker"
      type="checkbox"
    />
    <label
      class="checkbox-label"
      for="checkbox-xps9nn"
    />
  </span>
</div>
`;
